--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.18.4"
+    "whatsapp-web.js": "latest"
   }
 }
