--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "openai": "^3.1.0",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode-terminal": "latest",
     "whatsapp-web.js": "latest"
   }
 }
